--- a/source/_posts/删除电脑文件夹中右键菜单-授予访问权限选项.md
+++ b/source/_posts/删除电脑文件夹中右键菜单-授予访问权限选项.md
@@ -7,6 +7,7 @@ categories:
 tags:
 - [Windows]
 - [右键菜单]
+cover: https://cos5-1255991898.cos.ap-chongqing.myqcloud.com/tk/20211023-windows01.png
 ---
 
 ## 删除电脑文件夹中右键菜单-授予访问权限 选项
