--- a/source/_posts/删除电脑文件夹中右键菜单-自定义文件夹选项.md
+++ b/source/_posts/删除电脑文件夹中右键菜单-自定义文件夹选项.md
@@ -7,6 +7,7 @@ categories:
 tags:
 - [Windows]
 - [注册表]
+cover: https://cos5-1255991898.cos.ap-chongqing.myqcloud.com/tk/20211023-windows01.png
 ---
 
 1. WIN+R 输入 regedit 打开注册表
